# gh

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
docs/source/: conf.py  example_margarita.rst  index.rst  install.rst  requirements.txt
modeltools/: preprocessing.py
tests/: test_preprocessing.py
