[tool.poetry]
name = "modeltools"
version = "0.2.2"
description = ""
authors = ["CristianTacoronteRivero <cristiantr.develop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pandas = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
