[tool.poetry]
name = "modeltools"
version = "4.0.0"
description = ""
authors = ["CristianTacoronteRivero <cristiantr.develop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pandas = "^1.5.0"
Sphinx = "^5.2.3"
pytest-cov = "^4.0.0"
black = "^22.10.0"
pylint = "^2.15.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
